Fix image width on mobile

--- a/_webpack/stylesheets/custom.scss
+++ b/_webpack/stylesheets/custom.scss
@@ -553,16 +553,9 @@ i.icon-calendar {
     width: auto;
 
     @media screen and (max-width: $mobileW) {
-      width: 95%;
-      max-width: none;
-      max-height: none;
+      width: 100%;
     }
   }
-}
-
-.post-img__zoomable {
-  width: 100%;
-  height: auto;
 }
 
 /* Heart-shaped like button */
